--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
+  "proxy":"http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
