--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
-  "proxy":"http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jsonwebtoken": "^8.5.1"
   }
 }
