--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-hooks-helper": "^1.6.2",
     "@types/react-redux": "^7.1.9",
+    "@typescript-eslint/parser": "^3.1.0",
     "fg-loadcss": "^2.1.0",
     "firebase": "^7.14.2",
     "lodash": "latest",
@@ -35,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src/**"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,8 +56,10 @@
   "devDependencies": {
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
