--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "react/prop-types": 0, //needs to be enabled
+    "react/prop-types": 0, //needs to be used only with js
     "@typescript-eslint/indent": ["error", 4],
     "max-len": ["error", 250],
     "import/extensions": [
